# embedding-projector-standalone

./: .gitignore  LICENSE  NOTICE  POLYMER_LICENSE.txt  README.md  data_fetcher.py  pyproject.toml  server.py
static/js/: astra_helper.js
templates/: astra.html  file.html
