[project]
name = "embedding-projector-standalone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astrapy>=2.0.1",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "numpy>=2.2.5",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.34.2",
    "xlrd>=2.0.1",
]
